fixing issue where extra space would appear between photo and caption FIT-1305

--- a/modules/custom/cu_shortcodes/css/cu_shortcodes.css
+++ b/modules/custom/cu_shortcodes/css/cu_shortcodes.css
@@ -392,6 +392,10 @@ a.expand-title:focus {
   background: #f0f0f0;
   margin: 0;
 }
+div.image-caption img {
+  display: block;
+  margin-bottom: -20px;
+}
 div.image-caption  p:first-child {
   display: block;
   margin: 0;
